--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "gulp-header": "^1.2.2",
     "gulp-htmlhint": "^0.3.0",
     "gulp-htmlmin": "^1.1.3",
-    "gulp-if": "^1.2.5",
     "gulp-inject": "^1.5.0",
     "gulp-jscs": "^3.0.2",
     "gulp-jshint": "^1.11.0",
+    "gulp-load-plugins": "^1.1.0",
     "gulp-ng-html2js": "^0.2.0",
     "gulp-postcss": "^6.0.0",
     "gulp-processhtml": "^1.1.0",
@@ -49,18 +49,19 @@
     "main-bower-files": "^2.9.0",
     "merge2": "^0.3.6",
     "mkdirp": "^0.5.1",
-    "node-resemble.js": "0.0.3",
+    "node-resemble-js": "0.0.4",
     "phantomjs": "^1.9.18",
     "postcss-calc": "^5.0.0",
     "postcss-clearfix": "^0.2.0",
     "postcss-color-function": "^2.0.0",
     "postcss-color-rgba-fallback": "^2.0.0",
+    "postcss-discard-comments": "^2.0.2",
     "postcss-each": "^0.7.0",
     "postcss-easings": "^0.3.0",
     "postcss-fakeid": "^1.0.1",
     "postcss-font-variant": "^2.0.0",
     "postcss-for": "^2.0.0",
-    "postcss-import": "^7.0.0",
+    "postcss-import": "^7.1.3",
     "postcss-mixins": "^1.0.1",
     "postcss-nested": "^1.0.0",
     "postcss-pseudoelements": "^3.0.0",
@@ -73,6 +74,7 @@
     "rimraf": "^2.4.3",
     "run-sequence": "^1.1.2",
     "selenium-standalone": "^4.6.0",
+    "stream-combiner": "^0.2.2",
     "stylelint": "^1.1.0",
     "stylelint-statement-max-nesting-depth": "^0.4.0",
     "through2": "^2.0.0",
