--- a/package.json
+++ b/package.json
@@ -8,11 +8,16 @@
     "autoprefixer": "^6.0.3",
     "autoprefixer-core": "^6.0.1",
     "bower": "^1.4.1",
+    "chalk": "^1.1.1",
+    "change-case": "^2.3.0",
+    "cheerio": "^0.19.0",
+    "easy-table": "^1.0.0",
     "express": "^4.13.3",
     "gm": "^1.20.0",
     "gulp-clean": "^0.3.1",
     "gulp-concat": "^2.5.2",
     "gulp-cssnano": "^1.1.0",
+    "gulp-debug": "^2.1.2",
     "gulp-filter": "^3.0.1",
     "gulp-flatten": "^0.1.0",
     "gulp-header": "^1.2.2",
@@ -31,6 +36,7 @@
     "gulp-svgmin": "^1.2.0",
     "gulp-svgstore": "^5.0.2",
     "gulp-uglify": "^1.2.0",
+    "gulp-util": "^3.0.7",
     "jasmine": "^2.3.2",
     "jasmine-core": "^2.3.4",
     "jasmine-terminal-reporter": "^1.0.0",
@@ -45,6 +51,7 @@
     "karma-phantomjs-launcher": "^0.2.1",
     "karma-safari-launcher": "^0.1.1",
     "lodash": "^3.8.0",
+    "log-symbols": "^1.0.2",
     "lost": "^6.6.2",
     "main-bower-files": "^2.9.0",
     "merge2": "^0.3.6",
@@ -78,6 +85,7 @@
     "stylelint": "^1.1.0",
     "stylelint-statement-max-nesting-depth": "^0.4.0",
     "through2": "^2.0.0",
+    "vinyl-fs": "^2.2.1",
     "webdriverjs-angular": "^0.1.3",
     "yargs": "^3.12.0"
   },
