--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "postcss-selector-not": "^2.0.0",
     "postcss-simple-vars": "^1.0.1",
     "q": "^1.4.1",
-    "reporter-plus": "git://github.com/jayeb/reporter-plus.git",
+    "reporter-plus": "git://github.com/jayeb/reporter-plus.git#1.5.2",
     "rimraf": "^2.4.3",
     "run-sequence": "^1.1.2",
     "selenium-standalone": "^4.6.0",
