--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "run-sequence": "^1.1.2",
     "selenium-standalone": "^4.6.0",
     "semver": "^5.1.0",
+    "//": "Fixing socket.io version number to 1.3.7 because https://github.com/karma-runner/karma/issues/1788",
     "socket.io": "1.3.7",
     "stream-combiner": "^0.2.2",
     "stylelint": "^1.1.0",
