--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cheerio": "0.20.0",
     "easy-table": "1.0.0",
     "express": "4.13.4",
+    "glob": "^7.0.3",
     "gm": "1.21.1",
     "gulp-clean": "0.3.2",
     "gulp-concat": "2.6.0",
