--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "web-tools",
   "version": "6.0.0",
   "description": "Repository for tools and configurations common to all imgix web projects",
-  "license": "UNLICENSED",
+  "license": "BSD",
   "repository": "zebrafishlabs/web-tools",
   "//": "Fixing socket.io version number to 1.3.7 because https://github.com/karma-runner/karma/issues/1788",
   "dependencies": {
