--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "chalk": "1.1.1",
     "change-case": "2.3.1",
     "cheerio": "0.20.0",
+    "compression": "^1.6.2",
     "easy-table": "1.0.0",
     "express": "4.13.4",
     "glob": "^7.0.3",
