--- a/package.json
+++ b/package.json
@@ -10,68 +10,68 @@
   "license": "BSD",
   "main": "tools/web-tools.js",
   "dependencies": {
-    "autoprefixer": "6.3.3",
-    "chalk": "1.1.1",
-    "change-case": "2.3.1",
-    "cheerio": "0.20.0",
-    "compression": "^1.6.2",
+    "autoprefixer": "6.7.7",
+    "chalk": "1.1.3",
+    "change-case": "3.0.1",
+    "cheerio": "0.22.0",
+    "compression": "1.6.2",
     "easy-table": "1.0.0",
-    "express": "4.13.4",
+    "express": "4.15.2",
     "glob": "^7.0.3",
     "gulp-clean": "0.3.2",
-    "gulp-concat": "2.6.0",
-    "gulp-cssnano": "2.1.1",
-    "gulp-debug": "2.1.2",
-    "gulp-filter": "4.0.0",
-    "gulp-header": "1.7.1",
+    "gulp-concat": "2.6.1",
+    "gulp-cssnano": "2.1.2",
+    "gulp-debug": "3.1.0",
+    "gulp-filter": "5.0.0",
+    "gulp-header": "1.8.8",
     "gulp-htmlhint": "0.3.1",
-    "gulp-htmlmin": "1.3.0",
-    "gulp-inject": "3.0.0",
-    "gulp-jscs": "3.0.2",
-    "gulp-jshint": "2.0.0",
-    "gulp-load-plugins": "1.2.0",
-    "gulp-postcss": "6.1.0",
+    "gulp-htmlmin": "3.0.0",
+    "gulp-inject": "4.2.0",
+    "gulp-jscs": "4.0.0",
+    "gulp-jshint": "2.0.4",
+    "gulp-load-plugins": "1.5.0",
+    "gulp-postcss": "6.3.0",
     "gulp-processhtml": "1.1.0",
     "gulp-rename": "1.2.2",
-    "gulp-rev": "7.0.0",
-    "gulp-sourcemaps": "1.6.0",
-    "gulp-svgmin": "1.2.2",
-    "gulp-svgstore": "5.0.5",
-    "gulp-uglify": "1.5.3",
-    "gulp-util": "3.0.7",
-    "jscs": "2.11.0",
-    "jshint": "2.9.1",
-    "lodash": "4.6.1",
+    "gulp-rev": "7.1.2",
+    "gulp-sourcemaps": "2.4.1",
+    "gulp-svgmin": "1.2.3",
+    "gulp-svgstore": "6.1.0",
+    "gulp-uglify": "2.1.0",
+    "gulp-util": "3.0.8",
+    "jscs": "3.0.7",
+    "jshint": "2.9.4",
+    "lodash": "4.17.4",
     "log-symbols": "1.0.2",
-    "lost": "6.7.2",
-    "main-bower-files": "2.11.1",
-    "postcss-calc": "5.2.0",
-    "postcss-clearfix": "0.3.0",
-    "postcss-color-function": "2.0.0",
+    "lost": "8.0.0",
+    "main-bower-files": "2.13.1",
+    "postcss-calc": "5.3.1",
+    "postcss-clearfix": "1.0.0",
+    "postcss-color-function": "3.0.0",
     "postcss-color-rgba-fallback": "2.2.0",
     "postcss-discard-comments": "2.0.4",
-    "postcss-each": "0.9.1",
+    "postcss-each": "0.9.3",
     "postcss-easings": "0.3.0",
-    "postcss-font-variant": "2.0.0",
-    "postcss-for": "2.0.1",
-    "postcss-import": "8.0.2",
-    "postcss-mixins": "4.0.1",
+    "postcss-font-variant": "2.0.1",
+    "postcss-for": "2.1.1",
+    "postcss-import": "9.1.0",
+    "postcss-mixins": "5.4.1",
     "postcss-nested": "1.0.0",
     "postcss-pseudoelements": "3.0.0",
-    "postcss-scss": "0.1.7",
-    "postcss-selector-matches": "2.0.1",
+    "postcss-scss": "0.4.1",
+    "postcss-selector-matches": "2.0.5",
     "postcss-selector-not": "2.0.0",
-    "postcss-simple-vars": "1.2.0",
+    "postcss-simple-vars": "3.0.0",
     "q": "1.4.1",
     "reporter-plus": "git://github.com/jayeb/reporter-plus.git#1.6.0",
-    "run-sequence": "1.1.5",
-    "semver": "5.1.0",
+    "run-sequence": "1.2.2",
+    "semver": "5.3.0",
     "stream-combiner": "0.2.2",
     "stylelint": "4.5.1",
-    "through2": "2.0.1",
+    "through2": "2.0.3",
     "uri-js": "^2.1.1",
-    "vinyl-fs": "2.4.2",
-    "yargs": "4.2.0"
+    "vinyl-fs": "2.4.4",
+    "yargs": "7.0.2"
   },
   "devDependencies": {
     "gulp": "3.9.1",
