--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "stream-combiner": "0.2.2",
     "stylelint": "4.5.1",
     "through2": "2.0.3",
-    "uri-js": "^2.1.1",
+    "urijs": "^1.19.0",
     "vinyl-fs": "2.4.4",
     "yargs": "7.0.2"
   },
