--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "compression": "1.6.2",
     "easy-table": "1.0.0",
     "express": "4.15.2",
-    "glob": "^7.0.3",
+    "glob": "7.0.3",
     "gulp-clean": "0.3.2",
     "gulp-concat": "2.6.1",
     "gulp-cssnano": "2.1.2",
@@ -44,8 +44,8 @@
     "log-symbols": "1.0.2",
     "lost": "8.0.0",
     "main-bower-files": "2.13.1",
-    "main-npm-files": "^1.3.0",
-    "morgan": "^1.8.2",
+    "main-npm-files": "1.3.0",
+    "morgan": "1.8.2",
     "postcss-calc": "5.3.1",
     "postcss-clearfix": "1.0.0",
     "postcss-color-function": "3.0.0",
