--- a/package.json
+++ b/package.json
@@ -75,7 +75,10 @@
     "yargs": "7.0.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.11.4",
+    "@babel/preset-env": "^7.11.0",
     "gulp": "3.9.1",
+    "gulp-babel": "^8.0.0",
     "gulp-jscs": "3.0.2",
     "gulp-jshint": "2.0.0",
     "gulp-json-lint": "0.1.0",
