--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web-tools",
-  "version": "10.1.0",
+  "version": "10.2.0",
   "description": "Repository for tools and configurations common to all imgix web projects",
   "repository": {
     "type": "git",
@@ -10,6 +10,8 @@
   "license": "BSD",
   "main": "tools/web-tools.js",
   "dependencies": {
+    "@babel/core": "^7.11.4",
+    "@babel/preset-env": "^7.11.0",
     "autoprefixer": "6.7.7",
     "chalk": "1.1.3",
     "change-case": "3.0.1",
@@ -18,6 +20,7 @@
     "easy-table": "1.0.0",
     "express": "4.15.2",
     "glob": "7.0.3",
+    "gulp-babel": "^8.0.0",
     "gulp-clean": "0.3.2",
     "gulp-concat": "2.6.1",
     "gulp-cssnano": "2.1.2",
