--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "postcss-selector-not": "2.0.0",
     "postcss-simple-vars": "3.0.0",
     "q": "1.4.1",
-    "reporter-plus": "git://github.com/jayeb/reporter-plus.git#1.6.0",
+    "reporter-plus": "git+https://github.com/jayeb/reporter-plus.git#1.6.0",
     "semver": "5.3.0",
     "stream-combiner": "0.2.2",
     "stylelint": "4.5.1",
