--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web-tools",
-  "version": "10.5.0",
+  "version": "10.5.1-rc-1",
   "description": "Repository for tools and configurations common to all imgix web projects",
   "repository": {
     "type": "git",
