--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web-tools",
-  "version": "11.1.1",
+  "version": "11.2.0",
   "description": "Repository for tools and configurations common to all imgix web projects",
   "repository": {
     "type": "git",
@@ -17,15 +17,15 @@
     "chalk": "1.1.3",
     "change-case": "3.0.1",
     "cheerio": "0.22.0",
-    "compression": "1.6.2",
+    "compression": "^1.7.4",
     "easy-table": "1.0.0",
-    "express": "4.15.2",
+    "express": "^4.17.1",
     "glob": "7.0.3",
     "gulp": "4.0.2",
     "gulp-bro": "^2.0.0",
-    "gulp-clean": "0.3.2",
+    "gulp-clean": "^0.4.0",
     "gulp-concat": "2.6.1",
-    "gulp-cssnano": "2.1.2",
+    "gulp-cssnano": "^2.1.3",
     "gulp-debug": "3.1.0",
     "gulp-filter": "5.0.0",
     "gulp-header": "1.8.8",
@@ -36,24 +36,24 @@
     "gulp-jshint": "2.0.4",
     "gulp-json-lint": "0.1.0",
     "gulp-postcss": "6.3.0",
-    "gulp-processhtml": "1.1.0",
+    "gulp-processhtml": "^1.2.0",
     "gulp-rename": "1.2.2",
     "gulp-rev": "7.1.2",
-    "gulp4-run-sequence": "^1.0.1",
     "gulp-sort": "^2.0.0",
     "gulp-sourcemaps": "2.4.1",
     "gulp-svgmin": "1.2.3",
     "gulp-svgstore": "6.1.0",
     "gulp-uglify-es": "^2.0.0",
     "gulp-util": "3.0.8",
+    "gulp4-run-sequence": "^1.0.1",
     "jscs": "3.0.7",
-    "jshint": "2.9.4",
-    "lodash": "4.17.4",
+    "jshint": "^2.13.1",
+    "lodash": "^4.17.21",
     "log-symbols": "1.0.2",
     "lost": "8.0.0",
-    "main-bower-files": "2.13.1",
+    "main-bower-files": "^2.13.3",
     "main-npm-files": "1.3.0",
-    "morgan": "1.8.2",
+    "morgan": "^1.10.0",
     "postcss-calc": "5.3.1",
     "postcss-clearfix": "1.0.0",
     "postcss-color-function": "3.0.0",
