--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
   "devDependencies": {
     "@babel/core": "^7.11.4",
     "@babel/preset-env": "^7.11.0",
-    "gulp-v3": "^3.12.1",
+    "gulp-v3": "git+https://github.com/zebrafishlabs/gulp.git#3.20.1",
     "gulp-babel": "^8.0.0",
     "gulp-jscs": "3.0.2",
     "gulp-jshint": "2.0.0",
