--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-concat": "2.6.1",
     "gulp-cssnano": "2.1.2",
     "gulp-debug": "3.1.0",
+    "gulp-eslint": "^6.0.0",
     "gulp-filter": "5.0.0",
     "gulp-header": "1.8.8",
     "gulp-htmlhint": "0.3.1",
@@ -81,12 +82,12 @@
     "@babel/core": "^7.11.4",
     "@babel/preset-env": "^7.11.0",
     "gulp": "npm:gulp-v3@^3.12.1",
-    "gulp-v3": "git+https://github.com/zebrafishlabs/gulp.git#3.20.1",
     "gulp-babel": "^8.0.0",
     "gulp-jscs": "3.0.2",
     "gulp-jshint": "2.0.0",
     "gulp-json-lint": "0.1.0",
     "gulp-util": "3.0.7",
+    "gulp-v3": "git+https://github.com/zebrafishlabs/gulp.git#3.20.1",
     "jshint": "2.9.1",
     "lodash": "4.6.1",
     "reporter-plus": "git+https://github.com/jayeb/reporter-plus.git",
