--- a/runcoms/.eslintrc.json
+++ b/runcoms/.eslintrc.json
@@ -1,17 +1,14 @@
 {
   "parserOptions": {
     "ecmaVersion": 2020
-},
-"env": {
+  },
+  "env": {
     "es6": true
-},
+  },
   "globals": {},
   "rules": {
     "no-bitwise": 2,
-    "curly": [
-      2,
-      "all"
-    ],
+    "curly": [2, "all"],
     "eqeqeq": 2,
     "guard-for-in": 2,
     "no-extend-native": 2,
@@ -44,10 +41,7 @@
         "avoidEscape": true
       }
     ],
-    "no-cond-assign": [
-      2,
-      "except-parens"
-    ],
+    "no-cond-assign": [2, "except-parens"],
     "no-implicit-coercion": [
       2,
       {
@@ -66,14 +60,8 @@
     "no-multiple-empty-lines": 2,
     "no-multi-str": 2,
     "no-multi-spaces": 2,
-    "dot-location": [
-      2,
-      "property"
-    ],
-    "operator-linebreak": [
-      2,
-      "after"
-    ],
+    "dot-location": [2, "property"],
+    "operator-linebreak": [2, "after"],
     "key-spacing": [
       2,
       {
@@ -96,34 +84,15 @@
         "named": "never"
       }
     ],
-    "array-bracket-spacing": [
-      2,
-      "never",
-      {}
-    ],
-    "space-in-parens": [
-      2,
-      "never"
-    ],
+    "array-bracket-spacing": [2, "never", {}],
+    "space-in-parens": [2, "never"],
     "no-trailing-spaces": 2,
-    "yoda": [
-      2,
-      "never"
-    ],
-    "comma-style": [
-      2,
-      "last"
-    ],
+    "yoda": [2, "never"],
+    "comma-style": [2, "last"],
     "dot-notation": 2,
     "eol-last": 2,
-    "one-var": [
-      0,
-      "never"
-    ],
-    "semi": [
-      2,
-      "always"
-    ],
+    "one-var": [0, "never"],
+    "semi": [2, "always"],
     "space-infix-ops": 2,
     "keyword-spacing": [
       2,
@@ -141,9 +110,6 @@
         }
       }
     ],
-    "space-before-blocks": [
-      2,
-      "always"
-    ]
+    "space-before-blocks": [2, "always"]
   }
 }
