--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "gulp-svgstore": "6.1.0",
     "gulp-uglify-es": "^2.0.0",
     "gulp-util": "3.0.8",
+    "http-proxy-middleware": "^2.0.6",
     "jscs": "3.0.7",
     "jshint": "2.9.4",
     "lodash": "4.17.4",
